--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -18,6 +18,11 @@
             icon="view-list"
             ng-click="$ctrl.gotoSearchState('search.table')"
             ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
+    <div class="mf-divider vertical"></div>
+    <mf-icon-button
+            icon="orgchart"
+            disabled="true"
+            ng-attr-title="{{ 'Title_OrgChart' | translate }}"></mf-icon-button>
 </mf-app-bar>
 
 <org-chart person="$ctrl.person"
