--- a/src/main/angular/src/ux/auto-complete.component.scss
+++ b/src/main/angular/src/ux/auto-complete.component.scss
@@ -27,8 +27,9 @@ mf-auto-complete {
   position: relative;
 
   > mf-search-bar {
-    width: 100%;
+    height: 100%;
     max-width: 100%;
+    width: 100%;
   }
 
   > .results {
