--- a/src/main/angular/src/ux/search-bar.component.scss
+++ b/src/main/angular/src/ux/search-bar.component.scss
@@ -32,6 +32,7 @@ mf-search-bar {
     border: 1px solid #dae1e1;
     border-radius: 2px;
     box-sizing: border-box;
+    display: block;
     flex: 1 1 100%;
     height: 100%;
     line-height: 100%;
