--- a/src/main/angular/src/ux/auto-complete.component.scss
+++ b/src/main/angular/src/ux/auto-complete.component.scss
@@ -36,7 +36,6 @@ mf-auto-complete {
     background-color: white;
     bottom: 0;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
-    left: 0;
     list-style: none;
     margin: 0;
     max-height: 240px;
@@ -44,7 +43,6 @@ mf-auto-complete {
     overflow-y: auto;
     padding: 0;
     position: absolute;
-    text-align: left;
     transform: translateY(100%);
     width: 100%;
     z-index: 100;
@@ -57,6 +55,7 @@ mf-auto-complete {
       overflow: hidden;
       padding: 0 10px;
       text-overflow: ellipsis;
+      text-align: start;
       white-space: nowrap;
       width: 100%;
 
