--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.scss
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.scss
@@ -30,8 +30,12 @@
     > .person-details-header {
       background-color: #eef2f2;
 
+      > mf-button {
+        margin: 0 0 10px 0;
+      }
+
       > person-card {
-        height: 110px;
+        height: 120px;
         max-width: 100%;
         width: 100%;
 
