Disable photo url setting honored.

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -27,6 +27,7 @@
 
 <org-chart person="$ctrl.person"
            direct-reports="$ctrl.directReports"
+           show-images="$ctrl.photosEnabled"
            management-chain="$ctrl.managementChain">
 </org-chart>
 
