--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -1,5 +1,5 @@
 <div class="person-card-content" ng-switch="$ctrl.size">
-    <div class="avatar" ng-style="$ctrl.getAvatarStyle()" aria-label="User avatar"></div>
+    <div class="avatar" ng-if="$ctrl.isSmall() || $ctrl.showImage" ng-style="$ctrl.getAvatarStyle()" aria-label="User avatar"></div>
     <div class="reports"
          ng-if="$ctrl.showDirectReportCount && $ctrl.person.numDirectReports"
          ng-bind="$ctrl.person.numDirectReports"
