--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.html
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.html
@@ -4,6 +4,7 @@
             <person-card size="medium"
                          person="$ctrl.person"
                          disable-focus="true"
+                         show-image="$ctrl.photosEnabled"
                          show-direct-report-count="false"></person-card>
             <mf-button type="button" ng-click="$ctrl.gotoOrgChart()" ng-if="$ctrl.orgChartEnabled">
                 <mf-icon icon="orgchart"></mf-icon>
