PeopleSearchCardsComponent abortable requests

--- a/src/main/angular/src/ux/dialog.component.html
+++ b/src/main/angular/src/ux/dialog.component.html
@@ -1,6 +1,6 @@
 <div class="scrim" ng-click="$ctrl.closeDialog()"></div>
 <div class="mf-dialog-container">
-    <mf-icon-button icon="close" ng-click="$ctrl.closeDialog()"></mf-icon-button>
+    <mf-icon-button icon="close_thin" ng-click="$ctrl.closeDialog()"></mf-icon-button>
 
     <ng-transclude></ng-transclude>
 </div>
