--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -1,4 +1,4 @@
-<mf-icon class="search-icon" icon="magnify"></mf-icon>
+<mf-icon class="search-icon" icon="search_thin"></mf-icon>
 <input type="text"
        ng-blur="$ctrl.onBlur({ $event: $event })"
        ng-focus="$ctrl.onFocus({ $event: $event })"
@@ -8,5 +8,5 @@
        ng-attr-placeholder="{{ ('Placeholder_Search' | translate) }}"
        title="Search Box"
        autocomplete="off" />
-<mf-icon-button class="clear-input" icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon-button>
+<mf-icon-button class="clear-input" icon="close_thin" ng-click="$ctrl.clearSearchText()"></mf-icon-button>
 <!-- loader graphic -->
