--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -22,9 +22,11 @@
 </mf-app-bar>
 
 <div class="people-search-component-content">
-    <div class="search-info"
-         ng-if="$ctrl.loading || $ctrl.searchMessage"
-         ng-bind="$ctrl.loading ? ('Display_PleaseWait' | translate) : $ctrl.searchMessage"></div>
+    <div class="search-info-container">
+        <div class="search-info" ng-if="$ctrl.loading || $ctrl.searchMessage"
+             ng-bind="$ctrl.loading ? ('Display_PleaseWait' | translate) : $ctrl.searchMessage">
+        </div>
+    </div>
 
     <div class="person-card-list">
         <person-card person="person"
