Changed font size of title in AppBarComponent

--- a/src/main/angular/src/ux/app-bar.component.scss
+++ b/src/main/angular/src/ux/app-bar.component.scss
@@ -60,6 +60,7 @@ mf-app-bar {
     }
 
     > .page-content-title {
+      font-size: 24px;
       height: $mf-app-bar-height;
       line-height: $mf-app-bar-height;
     }
