--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -1,6 +1,7 @@
 <mf-app-bar>
     <div class="page-content-title" translate="Title_PeopleSearch">People Search</div>
-    <mf-search-bar search-text="$ctrl.query"
+    <mf-search-bar input-debounce="$ctrl.inputDebounce"
+                   search-text="$ctrl.query"
                    on-search-text-change="$ctrl.onSearchTextChange(value)"
                    on-key-down="$ctrl.onSearchBoxKeyDown($event)"
                    auto-focus></mf-search-bar>
