PeopleSearch and OrgChart titles hidden by default

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -1,5 +1,5 @@
 <mf-app-bar>
-    <div class="page-content-title" translate="Title_Organization">Organization</div>
+    <div id="page-content-title" translate="Title_Organization">Organization</div>
     <mf-auto-complete search-text="$ctrl.query"
                       on-search-text-change="$ctrl.onSearchTextChange(value)"
                       search="$ctrl.autoCompleteSearch(query)"
