--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -1,5 +1,5 @@
 <mf-app-bar>
-    <div class="page-content-title" translate="Title_PeopleSearch">People Search</div>
+    <div id="page-content-title" translate="Title_PeopleSearch">People Search</div>
     <mf-search-bar input-debounce="$ctrl.inputDebounce"
                    search-text="$ctrl.query"
                    on-search-text-change="$ctrl.onSearchTextChange(value)"
