--- a/src/main/angular/src/ux/app-bar.component.scss
+++ b/src/main/angular/src/ux/app-bar.component.scss
@@ -59,7 +59,7 @@ mf-app-bar {
       flex: 1 1;
     }
 
-    > .page-content-title {
+    > #page-content-title {
       font-size: 24px;
       height: $mf-app-bar-height;
       line-height: $mf-app-bar-height;
