Bug 1014416 - SSPR41_LOC:ALL:Untranslated "Search" in tooltip of "magnifying glass" icon in User Details dialog in People Search page of SSPR User Web Console

--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.html
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.html
@@ -50,7 +50,7 @@
                                         <mf-icon-button icon="search_thick"
                                                         ng-click="$ctrl.searchText(value)"
                                                         ng-if="detail.searchable"
-                                                        ng-attr-title="{{'Search \'' + value + '\''}}"></mf-icon-button>
+                                                        ng-attr-title="{{('Placeholder_Search' | translate) + ' \'' + value + '\''}}"></mf-icon-button>
                                     </li>
                                 </ul>
                             </div>
