--- a/src/main/angular/src/ux/search-bar.component.scss
+++ b/src/main/angular/src/ux/search-bar.component.scss
@@ -38,6 +38,10 @@ mf-search-bar {
     line-height: 100%;
     padding: 0 20px;
     width: 100%;
+
+    &[type=text]::-ms-clear {
+      display: none;
+    }
   }
 
   > .clear-input {
