--- a/src/main/angular/src/ux/table.directive.scss
+++ b/src/main/angular/src/ux/table.directive.scss
@@ -49,7 +49,7 @@ mf-table {
       font-weight: normal;
       overflow: hidden;
       padding: 5px;
-      text-align: start;
+      text-align: left;
       vertical-align: top;
     }
 
@@ -77,7 +77,7 @@ mf-table {
             max-width: 300px;
             padding: 10px;
             position: absolute;
-            text-align: start;
+            text-align: left;
             top: 0;
             transform: translateX(-100%);
 
@@ -134,12 +134,17 @@ mf-table {
 [dir="rtl"] {
   mf-table {
     > table {
+      th, td {
+        text-align: right;
+      }
+
       th {
         &.table-configuration-column {
           > .table-configuration {
             float: left;
 
             > ul {
+              text-align: right;
               left: 0;
               right: auto;
               transform: none;
