update localization fix issue with file locking on windows refactor changepassword module for post-redirect-get pattern misc java refactoring

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -525,6 +525,10 @@ div.progress-container > div {
     position: relative;
 }
 
+#header-right-logo {
+    position: absolute;
+}
+
 #header-warning-backdrop {
     bottom: 0;
     left: 0;
