OrgChartSearchComponent debounce property not propagating to SearchBoxComponent via AutocompleteComponent

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -3,6 +3,7 @@
     <mf-auto-complete search-text="$ctrl.query"
                       on-search-text-change="$ctrl.onSearchTextChange(value)"
                       search="$ctrl.autoCompleteSearch(query)"
+                      input-debounce="$ctrl.inputDebounce"
                       item-selected="$ctrl.onAutoCompleteItemSelected(person)"
                       item="person">
         <content-template>
