--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -337,6 +337,18 @@ input[type=password]::-ms-reveal{display: none;}
     content: "\f002";
 }
 
+.tile-image.newuser-image:before {
+    content: "\f234";
+}
+
+.tile-image.activation-image:before {
+    content: "\f19d";
+}
+
+.tile-image.forgotten-image:before {
+    content: "\f09c";
+}
+
 .tile-image.security-image:before {
     content: "\f0cb";
 }
