Added id's for cards colums and icons for the views

--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -8,15 +8,18 @@
     <span flex></span>
     <mf-icon-button
             icon="view-tile"
+            id="view-title-button"
             ng-click="$ctrl.gotoCardsView()"
             ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
     <mf-icon-button
             icon="view-list"
+            id="view-list-button"
             disabled="true"
             ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
     <div class="mf-divider vertical" ng-if="$ctrl.orgChartEnabled"></div>
     <mf-icon-button
             icon="orgchart"
+            id="view-orgchart-button"
             ng-click="$ctrl.gotoOrgchart()"
             ng-if="$ctrl.orgChartEnabled"
             ng-attr-title="{{ 'Title_OrgChart' | translate }}"></mf-icon-button>
@@ -36,7 +39,8 @@
               on-click-item="$ctrl.selectPerson(person)">
         <mf-table-column ng-repeat="(key, value) in $ctrl.columnConfiguration"
                          label="value"
-                         value="'person.' + key">
+                         value="'person.' + key"
+                         ng-attr-id="{{ 'column-' + ctrl.index }}">
         </mf-table-column>
     </mf-table>
 
