--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -1,5 +1,6 @@
 <mf-icon class="search-icon" icon="search_thick"></mf-icon>
 <input type="text"
+       id="search-bar"
        ng-blur="$ctrl.onBlur({ $event: $event })"
        ng-focus="$ctrl.onFocus({ $event: $event })"
        ng-keydown="$ctrl.onInputKeyDown($event)"
